# libshell

./: .gitignore  Doxyfile.in  Makefile.am  README  autogen.sh  configure.ac
example/: echo.c
source/: buffer.c  buffer.h  scanner.rl  shell.h  util.h
test/: test_buffer.c  test_scanner.c
